Modified views for posts

--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -1,4 +1,10 @@
+<div class = "mb-4">
 <h1>Places</h1>
+</div>
+
+<p>
+  <a class = "btn btn-dark" href="/places/new" role = "button">New Place </a>
+</p>
 
 <ul>
   <% for place in @places %>
