--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,25 +1,58 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Tacostagram Final</title>
+    <title>TacoTok App</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
-    <link rel="stylesheet" href="/stylesheets/application.css">
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
   </head>
 
   <body>
-    <div>
-      <%= flash["notice"] %>
+    <nav class="navbar navbar-expand-lg bg-light">
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-item btn btn-light">
+            <a class="nav-link active" aria-current="page" href="/">Home</a>
+          </li>
+        </ul>
+        <% if @current_user %>
+          <ul class="navbar-nav">
+            <li class="nav-item text-center">
+            Logged in as: <%= @current_user["username"] %>
+            </li>
+          </ul>
+          <ul class="navbar-nav me-1 ms-1">
+            <li class="nav-item btn btn-light">
+            <a class="nav-link active" aria-current="page" href="/logout">Logout</a>
+            </li>
+          </ul>
+        <% else %>
+          <ul class="navbar-nav">
+            <li class="nav-item btn btn-light">
+              <a class="nav-link active" aria-current="page" href="/login">Login</a>
+            </li>
+          </ul>
+          <ul class="navbar-nav me-1 ms-1">
+            <li class="nav-item btn btn-light">
+              <a class="nav-link active" aria-current="page" href="/users/new">Signup</a>
+            </li>
+          </ul>
+        <% end %>
+      </div>
+    </nav>
+    <div class="container mt-3 pe-2 ps-2">
+      <div>
+        <%= flash["notice"] %>
+      </div>
+      
+        <%= yield %>
     </div>
-    <div>
-      <a href="/">Home</a>
-      <a href="/logout">Logout</a>
-      <a href="/login">Login</a>
-      <a href="/users/new">Signup</a>
-    </div>
-
-    <%= yield %>
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
   </body>
 </html>
