--- a/app/views/places/new.html.erb
+++ b/app/views/places/new.html.erb
@@ -1,11 +1,18 @@
-<h1>New Place</h1>
+<div>
+  <% if @current_user%>
 
-<%= form_with :model => @place do |form| %>
-  <p>
-    <%= form.label "name" %>
-    <%= form.text_field "name" %>
-  </p>
-  <p>
-    <%= form.submit %>
-  </p>
-<% end %>
+  <h1>New Place</h1>
+
+  <%= form_with :model => @place do |form| %>
+    <p>
+      <%= form.label "name", class: "form-label" %>
+      <%= form.text_field "name", class: "form-control" %>
+    </p>
+    <div class = "mt-4">
+          <%= form.submit "Create Place", class: "btn btn-dark"%>
+    </div>
+    <% end %>
+    <% else %>
+    You must be <a href="/login">logged in</a>.
+    <% end %>
+    </div>
