--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -1,16 +1,33 @@
-<h1><%= @place["name"] %></h1>
+<div>
+  <h1><%= @place["name"] %></h1>
 
-<h2>My Posts</h2>
-<% for post in @posts %>
-  <h3><%= post["title"] %></h3>
-  <h4><%= post["posted_on"] %></h4>
-  <p><%= post["description"] %></p>
-<% end %>
+  <div class = "mt-4 mb-4">
+    <a class= "btn btn-dark" href="/posts/new?place_id=<%= @place["id"]%>"  role = "button" >New Post</a>
+  </div>
 
-<p>
-  <a href="/posts/new?place_id=<%= @place["id"] %>">New Post</a>
-</p>
 
-<p>
-  <a href="/places">Back to All Places</a>
-</p>
+  <% if @current_user %>
+
+  <div class="row">
+    <% for post in @posts %>
+      <div class="col-lg-4 pb-2">
+        <h3><%= post["title"] %></h3>
+        <h4><%= post["posted_on"] %></h4>
+        <% if post.uploaded_image.attached? %>
+          <img src="<%= url_for(post.uploaded_image) %>" class="img-fluid">
+        <% else %>
+        <% end %>
+        <p><%= post["description"] %></p>
+      </div>
+    <% end %>
+  </div>
+
+  <% else %>
+  Please <a href="/login">log in</a> to see your posts.
+  <% end%>
+
+
+  <p>
+    <a href="/places">Back to all places</a>
+  </p>
+</div>
