--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,20 +1,29 @@
-<h1>New Post</h1>
+<% if @current_user%>
+    <h1>New Post</h1>
 
-<%= form_with :model => @post do |form| %>
-  <p>
-    <%= form.label "title" %>
-    <%= form.text_field "title" %>
-  </p>
-  <p>
-    <%= form.label "description" %>
-    <%= form.text_field "description" %>
-  </p>
-  <p>
-    <%= form.label "posted_on" %>
-    <%= form.date_field "posted_on" %>
-  </p>
-  <p>
-    <%= form.submit %>
-  </p>
-  <%= form.hidden_field "place_id" %>
+  <%= form_with :model => @post do |form| %>
+    <p>
+      <%= form.label "title", class: "form-label" %>
+      <%= form.text_field "title", class: "form-control" %>
+    </p>
+    <p>
+      <%= form.label "description", class: "form-label" %>
+      <%= form.text_field "description", class: "form-control" %>
+    </p>
+    <p>
+      <%= form.label "posted_on", class: "form-label" %>
+      <%= form.date_field "posted_on", class: "form-control" %>
+    </p>
+    <div class="mb-4">
+      <%= form.label "uploaded_image", :class => "form-label" %>
+      <%= form.file_field "uploaded_image", :accept => "image/png,image/jpg,image/jpeg,image/gif",  :class => "form-control" %>
+    </div>
+    <p>
+      <%= form.submit "Create Post", class: "btn btn-dark"%>
+
+    </p>
+    <%= form.hidden_field "place_id" %>
+  <% end %>
+<% else %>
+You must be <a href="/login">logged in</a>.
 <% end %>
