--- a/app/views/places/new.html.erb
+++ b/app/views/places/new.html.erb
@@ -9,7 +9,7 @@
       <%= form.text_field "name", class: "form-control" %>
     </p>
     <div class = "mt-4">
-          <%= form.submit "Create Place", class: "btn btn-dark"%>
+          <%= form.submit "Create Place", class: "btn btn-primary"%>
     </div>
     <% end %>
     <% else %>
