--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -15,7 +15,7 @@
     <%= form.password_field "password", class: "form-control" %>
   </p>
   <div class = "mt-4">
-    <%= form.submit "Sign up", class: "btn btn-dark" %>
+    <%= form.submit "Sign up", class: "btn btn-primary" %>
   </div>
 <% end %>
 </div>
