--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -5,7 +5,7 @@
 <p>
   <a class = "btn btn-dark" href="/places/new" role = "button">New Place </a>
 </p>
-
+<%#creating a list of places as per data entered by user%>
 <ul>
   <% for place in @places %>
     <li><a href="/places/<%= place["id"] %>"><%= place["name"] %></a></li>
