Made certain changes for visual enhancement

--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -3,7 +3,7 @@
 </div>
 
 <p>
-  <a class = "btn btn-dark" href="/places/new" role = "button">New Place </a>
+  <a class = "btn btn-primary" href="/places/new" role = "button">New Place </a>
 </p>
 <%#creating a list of places as per data entered by user%>
 <ul>
