--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -2,7 +2,7 @@
   <h1><%= @place["name"] %></h1>
 
   <div class = "mt-4 mb-4">
-    <a class= "btn btn-dark" href="/posts/new?place_id=<%= @place["id"]%>"  role = "button" >New Post</a>
+    <a class= "btn btn-primary" href="/posts/new?place_id=<%= @place["id"]%>"  role = "button" >New Post</a>
   </div>
 
 
