Made some changes for visual appearance

--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -19,7 +19,7 @@
       <%= form.file_field "uploaded_image", :accept => "image/png,image/jpg,image/jpeg,image/gif",  :class => "form-control" %>
     </div>
     <p>
-      <%= form.submit "Create Post", class: "btn btn-primary"%>
+      <%= form.submit "Create Post", class: "btn btn-dark"%>
 
     </p>
     <%= form.hidden_field "place_id" %>
